module(
    name = "swiftlint",
    version = "0.50.3",
    compatibility_level = 1,
    repo_name = "SwiftLint",
)

bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "rules_apple", version = "2.0.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift", version = "1.5.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_xcodeproj", version = "0.12.3", repo_name = "com_github_buildbuddy_io_rules_xcodeproj")
bazel_dep(name = "sourcekitten", version = "0.34.0", repo_name = "com_github_jpsim_sourcekitten")
bazel_dep(name = "swift_argument_parser", version = "1.2.1", repo_name = "sourcekitten_com_github_apple_swift_argument_parser")
bazel_dep(name = "yams", version = "5.0.3", repo_name = "sourcekitten_com_github_jpsim_yams")

swiftlint_repos = use_extension("//bazel:repos.bzl", "swiftlint_repos_bzlmod")
use_repo(
    swiftlint_repos,
    "com_github_apple_swift_syntax",
    "com_github_johnsundell_collectionconcurrencykit",
    "com_github_krzyzanowskim_cryptoswift",
    "swiftlint_com_github_scottrhoyt_swifty_text_table",
)

extra_rules = use_extension("//bazel:extensions.bzl", "extra_rules")
use_repo(extra_rules, "swiftlint_extra_rules")
